src/snapshot_middleware/snapshots/librojo__snapshot_middleware__json_model__test__model_from_vfs.snap
---
source: src/snapshot_middleware/json_model.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo.model.json5
  relevant_paths:
    - /foo.model.json5
  context:
    decode_windows_invalid_chars: true
  specified_id: ~
  middleware: ~
  schema: ~
name: foo
class_name: IntValue
properties:
  Value:
    Int64: 5
children:
  - snapshot_id: "00000000000000000000000000000000"
    metadata:
      ignore_unknown_instances: false
      relevant_paths: []
      context:
        decode_windows_invalid_chars: true
      specified_id: ~
      middleware: ~
      schema: ~
    name: The Child
    class_name: StringValue
    properties: {}
    children: []
